--- a/style.css
+++ b/style.css
@@ -14,12 +14,28 @@
 html, body {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .container {
     width: 300px;
     aspect-ratio: 1;
     position: relative;
+    animation: my-rotate 5s infinite;
 }
+
+@keyframes my-rotate {
+  0%,
+  100% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+}
+
 .circle {
     width: 200px;
     aspect-ratio: 1;
